# szymon

./: .env.example  .gitignore  CLAUDE.md  justfile  pyproject.toml
szymon/: main.py
szymon/routers/: calendar.py  tasks.py
szymon/services/: google_auth.py  google_calendar.py  google_tasks.py
thoughts/shared/plans/: google-calendar-integration.md  google-tasks-router-refactor.md  minimal-calendar-design-system.md
thoughts/shared/research/: 2026-02-01_14-51-37_google-calendar-integration.md  2026-02-01_15-41-56_python-vs-go-rewrite.md  2026-02-01_17-30-00_google-docs-integration.md  2026-02-01_20-15-00_hot-reload-python-javascript.md  2026-02-01_google-tasks-refactor.md  2026-02-01_minimal-calendar-design-system.md
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  Calendar.jsx  main.jsx
