[project]
name = "szymon"
version = "0.1.0"
description = "Personal assistant - gateway for personal APIs and tools"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
]

[project.scripts]
szymon = "szymon.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["szymon"]
